--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,6 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+  <navbar title="home"></navbar>
 </ion-header>
 
 <ion-content padding>
-  <button ion-button outline (click)="signInWithFacebook()">Login</button>  
-  <button ion-button outline (click)="signOut()">Logout</button>
 </ion-content>
