--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs #menu>
   <ion-tab [root]="orders" tabTitle="Ordernes"></ion-tab>
   <ion-tab [root]="create" tabTitle="+"></ion-tab>
   <ion-tab [root]="locate" tabTitle="localizanos"></ion-tab>
