--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -9,18 +9,14 @@
 
 <ion-content padding>
   <div class="create-form">
-    <ion-list radio-group [(ngModel)]="typeOrder">
-      <ion-item>
-        <ion-label>Para Llevar</ion-label>
-        <ion-radio value="llevar"></ion-radio>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>Para la mesa</ion-label>
-        <ion-radio value="mesa"></ion-radio>
-      </ion-item>
-    </ion-list>
-
+    <ion-segment [(ngModel)]="typeOrder">
+      <ion-segment-button value="llevar">
+          Para Llevar
+      </ion-segment-button>
+      <ion-segment-button value="mesa">
+          Para la mesa
+      </ion-segment-button>
+    </ion-segment>
     <ion-list>
       <ion-item *ngIf="typeOrder === 'llevar'">
         <ion-label color="primary" floating>Dirección</ion-label>
@@ -31,14 +27,14 @@
         <ion-input type="text" [(ngModel)]="tableOrder"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label color="primary" floating>Cantidad</ion-label>
-        <ion-input type="tel" [(ngModel)]="amountPlate"></ion-input>
-      </ion-item>
-      <ion-item>
         <ion-label color="primary" floating>Plato</ion-label>
         <ion-select [(ngModel)]="plateOrder">
           <ion-option *ngFor="let plate of getPlates()" [value]="plate">{{plate.name}}</ion-option>
         </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary" floating>Cantidad</ion-label>
+        <ion-input type="tel" [(ngModel)]="amountPlate"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label color="primary" floating>Decripción</ion-label>
