--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -1,18 +1,78 @@
-<!--
-  Generated template for the OrdersPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
     <ion-title>orders</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
+  <ion-segment [(ngModel)]="active">
+    <ion-segment-button value="true">
+      Activas
+    </ion-segment-button>
+    <ion-segment-button value="false">
+      Todas
+    </ion-segment-button>
+  </ion-segment>
 
+  <div *ngIf="active === 'true'">
+    <ion-card *ngFor="let order of activeOrders">
+      <ion-card-header>
+        <h1 *ngIf="order.type === 'mesa'">Mesa: {{order.table}}</h1>
+        <h1 *ngIf="order.type === 'llevar'">Dirección: {{order.address}}</h1>
+      </ion-card-header>
+      <ion-card-content>
+        <ul>
+          <li *ngFor="let plate of order.plates">
+            <h2>{{plate.amount}} - {{plate.name}}</h2>
+            <p>{{plate.description}}</p>
+          </li>
+        </ul>
+
+        <p>{{order.state}}</p>
+      </ion-card-content>
+      <ion-row>
+        <ion-col>
+          <button ion-button block (click)="editOrder(order)">
+            <div>Editar</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button block (click)="billOrder(order)">
+            <div>Cobrar</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button block (click)="cancellOrder(order)">
+            <div>Cancelar</div>
+          </button>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+  </div>
+  <div *ngIf="active === 'false'">
+    <ion-card *ngFor="let order of allOrders">
+      <ion-card-header>
+        <h1 *ngIf="order.type === 'mesa'">Mesa: {{order.table}}</h1>
+        <h1 *ngIf="order.type === 'llevar'">Dirección: {{order.address}}</h1>
+      </ion-card-header>
+      <ion-card-content>
+        <ul>
+          <li *ngFor="let plate of order.plates">
+            <h2>{{plate.amount}} - {{plate.name}}</h2>
+            <p>{{plate.description}}</p>
+          </li>
+        </ul>
+
+        <p>{{order.state}}</p>
+      </ion-card-content>
+      <ion-row>
+        <ion-col>
+          <button ion-button block (click)="billOrder(order)">
+            <div>Ver Factura</div>
+          </button>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+  </div>
 </ion-content>
