--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,5 +3,5 @@
 
 
 <ion-content padding>
-  <button ion-button block (click)="login('google')">Entra con Google</button>
+  <button ion-button block (click)="login('google')">{{'Entra con Google' | translate | async}}</button>
 </ion-content>
